--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.15.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
