--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "http-proxy-middleware": "^0.19.1",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
